<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="recipe"
            type="com.humanoo.recipes.model.RecipeData" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/recipe_thumbnail"
            style="@style/RecipePoster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/str_recipe_details"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:imageFromUrl="@{recipe.thumbnail}"
            android:transitionName="@{@string/transition_avatar(recipe.id)}"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_thumbnail">

            <TextView
                style="@style/RecipeDetailsTitle"
                android:text="@string/str_recipe_name" />

            <TextView
                android:id="@+id/recipe_name"
                style="@style/RecipeDetailsText"
                android:text="@{recipe.title}"
                android:transitionName="@{@string/transition_name(recipe.id)}"
                />

            <TextView
                style="@style/RecipeDetailsTitle"
                android:text="@string/str_ingredients" />

            <TextView
                android:id="@+id/txtView_ingredient"
                style="@style/RecipeDetailsText"
                android:text="@{recipe.ingredients}"
                />

            <TextView
                style="@style/RecipeDetailsTitle"
                android:text="@string/str_web_link" />

            <TextView
                android:id="@+id/txtView_web_link"
                style="@style/RecipeDetailsText"
                android:text="@{recipe.href}"
                android:onClick="@{clickListener}"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>